samples/_failures_safe/1761472104_3902d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f03aee9f.c: In function ‘main’:
./samples/SAFE/__tmp_f03aee9f.c:125:62: error: missing terminating " character
  125 |                strcmp(filter, "INFO") == 0 || strcmp(filter, "DEBUG
      |                                                              ^~~~~~
./samples/SAFE/__tmp_f03aee9f.c:125:16: error: expected expression at end of input
  125 |                strcmp(filter, "INFO") == 0 || strcmp(filter, "DEBUG
      |                ^~~~~~
./samples/SAFE/__tmp_f03aee9f.c:125:16: error: expected declaration or statement at end of input
